readjustments of some styles and sizes

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       </section>
      </div>
   </main>
-  <footer class="attribution">
+  <footer class="modal__text attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/Adriverion">Adriverion</a>.
   </footer>
